--- a/src/UI/ConfigEditor.Wpf/Views/ConfigEditView.xaml
+++ b/src/UI/ConfigEditor.Wpf/Views/ConfigEditView.xaml
@@ -30,11 +30,16 @@
             </TabControl.ItemTemplate>
             <TabControl.ContentTemplate>
                 <DataTemplate>
-                    <ScrollViewer Margin="10">
-                        <ItemsControl ItemsSource="{Binding Configs}">
+                    <ScrollViewer>
+                        <ItemsControl ItemsSource="{Binding Configs}"  Margin="10">
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <WrapPanel/>
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
-                                    <c:PropertiyView   AddCommand="{Binding DataContext.AddArrayCommand,RelativeSource={RelativeSource AncestorType=TabControl, Mode=FindAncestor}}" SetObjectCommand="{Binding DataContext.SetObjectCommand,RelativeSource={RelativeSource AncestorType=TabControl, Mode=FindAncestor}}"></c:PropertiyView>
+                                    <c:PropertiyView   AddCommand="{Binding DataContext.AddArrayCommand,RelativeSource={RelativeSource AncestorType=TabControl, Mode=FindAncestor}}" SetObjectCommand="{Binding DataContext.SetObjectCommand,RelativeSource={RelativeSource AncestorType=TabControl, Mode=FindAncestor}}" Margin="2,0"></c:PropertiyView>
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
                         </ItemsControl>
