--- a/src/UI/ConfigEditor.Wpf/Controls/PropertiyView.xaml
+++ b/src/UI/ConfigEditor.Wpf/Controls/PropertiyView.xaml
@@ -18,12 +18,13 @@
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="Foreground" Value="{DynamicResource PrimaryTextBrush}" />
         </Style>
+        <converters:PropertyWidthConverter x:Key="WidthConverter"/>
         <converters:TimeOnlyConverter x:Key="TimeOnlyConverter"></converters:TimeOnlyConverter>
         <converters:StringBoolConverter x:Key="StringBoolConverter"></converters:StringBoolConverter>
         <converters:StringDoubleConverter x:Key="StringDoubleConverter"></converters:StringDoubleConverter>
         <converters:ObjStringConverter x:Key="ObjStringConverter"></converters:ObjStringConverter>
         <DataTemplate x:Key="Normal">
-            <StackPanel Width="200">
+            <StackPanel>
                 <TextBlock Text="{Binding DisplayName}" Style="{StaticResource tb}" />
                 <TextBox Text="{Binding Value,UpdateSourceTrigger=PropertyChanged}" x:Name="tbString" Validation.ErrorTemplate="{x:Null}" Style="{StaticResource TextBoxExtend}" hc:InfoElement.Placeholder="{Binding Prompt}"></TextBox>
                 <ItemsControl ItemsSource="{Binding (Validation.Errors),ElementName=tbString}" Visibility="{Binding (Validation.HasError), ElementName=tbString, Converter={StaticResource Boolean2VisibilityConverter}}">
@@ -36,7 +37,7 @@
             </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="Number">
-            <StackPanel Width="200">
+            <StackPanel>
                 <TextBlock Text="{Binding DisplayName}"  Style="{StaticResource tb}" />
                 <hc:NumericUpDown Value="{Binding Value,Converter={StaticResource StringDoubleConverter},UpdateSourceTrigger=PropertyChanged}" Maximum="{Binding Maximum}" Minimum="{Binding Minimum}" Validation.ErrorTemplate="{x:Null}" x:Name="tbNumber"  Style="{StaticResource NumericUpDownExtend}" hc:InfoElement.Placeholder="{Binding Prompt}"/>
                 <ItemsControl ItemsSource="{Binding (Validation.Errors),ElementName=tbNumber}" Visibility="{Binding (Validation.HasError), ElementName=tbNumber, Converter={StaticResource Boolean2VisibilityConverter}}">
@@ -50,7 +51,7 @@
 
         </DataTemplate>
         <DataTemplate x:Key="Bool">
-            <StackPanel Width="200" VerticalAlignment="Top" Margin="0,20,0,0"  >
+            <StackPanel VerticalAlignment="Top" Margin="0,20,0,0"  >
                 <CheckBox IsChecked="{Binding Value,Converter={StaticResource StringBoolConverter},UpdateSourceTrigger=PropertyChanged}"  Content="{Binding DisplayName}" x:Name="cbBool"  />
                 <ItemsControl ItemsSource="{Binding (Validation.Errors),ElementName=cbBool}" Visibility="{Binding (Validation.HasError), ElementName=cbBool, Converter={StaticResource Boolean2VisibilityConverter}}">
                     <ItemsControl.ItemTemplate>
@@ -62,7 +63,7 @@
             </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="Enum">
-            <StackPanel Width="200">
+            <StackPanel>
                 <TextBlock Text="{Binding DisplayName}"  Style="{StaticResource tb}" />
                 <ComboBox ItemsSource="{Binding Options}" SelectedValue="{Binding Value,UpdateSourceTrigger=PropertyChanged}" SelectedValuePath="Value" DisplayMemberPath="Key" x:Name="cb" Style="{StaticResource ComboBoxExtend}" hc:InfoElement.Placeholder="{Binding Prompt}"/>
                 <ItemsControl ItemsSource="{Binding (Validation.Errors),ElementName=cb}" Visibility="{Binding (Validation.HasError), ElementName=cb, Converter={StaticResource Boolean2VisibilityConverter}}">
@@ -75,7 +76,7 @@
             </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="DateTime">
-            <StackPanel Width="200">
+            <StackPanel>
                 <TextBlock Text="{Binding DisplayName}"  Style="{StaticResource tb}" />
                 <hc:DateTimePicker SelectedDateTime="{Binding Value,UpdateSourceTrigger=PropertyChanged}" x:Name="dtp" DateTimeFormat="yyyy-MM-dd HH:mm:ss" Style="{StaticResource DateTimePickerExtend}" hc:InfoElement.Placeholder="{Binding Prompt}"/>
                 <ItemsControl ItemsSource="{Binding (Validation.Errors),ElementName=dtp}" Visibility="{Binding (Validation.HasError), ElementName=dtp, Converter={StaticResource Boolean2VisibilityConverter}}">
@@ -88,7 +89,7 @@
             </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="Date">
-            <StackPanel Width="200">
+            <StackPanel>
                 <TextBlock Text="{Binding DisplayName}"   Style="{StaticResource tb}" />
                 <hc:DatePicker SelectedDate="{Binding Value,UpdateSourceTrigger=PropertyChanged}" x:Name="dp" hc:InfoElement.Placeholder="{Binding Prompt}" Style="{StaticResource  DatePickerExtend}"/>
                 <ItemsControl ItemsSource="{Binding (Validation.Errors),ElementName=dp}" Visibility="{Binding (Validation.HasError), ElementName=dp, Converter={StaticResource Boolean2VisibilityConverter}}">
@@ -101,7 +102,7 @@
             </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="Time">
-            <StackPanel Width="200">
+            <StackPanel>
                 <TextBlock Text="{Binding DisplayName}"  Style="{StaticResource tb}" />
                 <hc:TimePicker SelectedTime="{Binding Value,UpdateSourceTrigger=PropertyChanged}" x:Name="tp" TimeFormat="HH:mm:ss" Style="{StaticResource TimePickerExtend}" hc:InfoElement.Placeholder="{Binding Prompt}"/>
                 <ItemsControl ItemsSource="{Binding (Validation.Errors),ElementName=tp}" Visibility="{Binding (Validation.HasError), ElementName=tp, Converter={StaticResource Boolean2VisibilityConverter}}">
@@ -123,15 +124,28 @@
                             />
                 </StackPanel>
 
-                <Border BorderBrush="Gray" BorderThickness="1" Padding="6" ToolTip="{Binding DisplayName}">
+                <Border BorderBrush="Gray" BorderThickness="1,0,0,0" Padding="6" ToolTip="{Binding DisplayName}">
 
                     <ItemsControl ItemsSource="{Binding Properties}" AlternationCount="{Binding Properties.Count}" >
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <WrapPanel/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
-                                <Grid >
+                                <Grid  HorizontalAlignment="Left">
                                     <local:PropertiyView DataContext="{Binding}" 
                                                          AddCommand="{Binding AddCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" 
-                                                         SetObjectCommand="{Binding SetObjectCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" Padding="0,0,10,0"/>
+                                                         SetObjectCommand="{Binding SetObjectCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" Padding="0,0,10,0">
+                                        <local:PropertiyView.Width>
+                                            <MultiBinding Converter="{StaticResource WidthConverter}">
+                                                <Binding Path="."/>
+                                                <Binding Path="ActualWidth" RelativeSource="{RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}"/>
+
+                                            </MultiBinding>
+                                        </local:PropertiyView.Width>
+                                    </local:PropertiyView>
                                     <Button Content="-" 
                                             Style="{StaticResource ButtonCustom}"
                                             Command="{Binding RemoveCommand,ElementName=page}" 
@@ -154,7 +168,7 @@
             <StackPanel >
                 <TextBlock Text="{Binding DisplayName}" Style="{StaticResource tb}" />
 
-                <Border BorderBrush="Gray" BorderThickness="1" Padding="4">
+                <Border BorderBrush="Gray" BorderThickness="1,0,0,0" Padding="4">
                     <StackPanel>
                         <Button Visibility="{Binding Value,Converter={StaticResource String2VisibilityReConverter}}" Content="创建" Command="{Binding SetObjectCommand,ElementName=page}" CommandParameter="{Binding .}"/>
                         <ItemsControl ItemsSource="{Binding Properties}" Visibility="{Binding Value,Converter={StaticResource String2VisibilityConverter}}">
@@ -167,7 +181,15 @@
                                 <DataTemplate>
                                     <local:PropertiyView DataContext="{Binding}" 
                                                      AddCommand="{Binding AddCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" 
-                                                     SetObjectCommand="{Binding SetObjectCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" Margin="2,0"/>
+                                                     SetObjectCommand="{Binding SetObjectCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" Margin="2,0">
+                                        <local:PropertiyView.Width>
+                                            <MultiBinding Converter="{StaticResource WidthConverter}">
+                                                <Binding Path="."/>
+                                                <Binding Path="ActualWidth" RelativeSource="{RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}"/>
+
+                                            </MultiBinding>
+                                        </local:PropertiyView.Width>
+                                    </local:PropertiyView>
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
                         </ItemsControl>
