--- a/src/UI/ConfigEditor.Wpf/Views/ConfigEditView.xaml
+++ b/src/UI/ConfigEditor.Wpf/Views/ConfigEditView.xaml
@@ -7,11 +7,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ConfigEditor.Views"
-             xmlns:c="clr-namespace:ConfigEditor.Controls" xmlns:hc="https://handyorg.github.io/handycontrol"
+             xmlns:c="clr-namespace:ConfigEditor.Controls" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:converters="clr-namespace:ConfigEditor.Converters"
                           d:DataContext="{d:DesignInstance Type=vms:ConfigEditViewModel}"
                           mc:Ignorable="d" 
                           x:Name="page"
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <converters:PropertyWidthConverter x:Key="WidthConverter"/>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -39,7 +42,15 @@
                             </ItemsControl.ItemsPanel>
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
-                                    <c:PropertiyView   AddCommand="{Binding DataContext.AddArrayCommand,RelativeSource={RelativeSource AncestorType=TabControl, Mode=FindAncestor}}" SetObjectCommand="{Binding DataContext.SetObjectCommand,RelativeSource={RelativeSource AncestorType=TabControl, Mode=FindAncestor}}" Margin="2,0"></c:PropertiyView>
+                                    <c:PropertiyView   AddCommand="{Binding DataContext.AddArrayCommand,RelativeSource={RelativeSource AncestorType=TabControl, Mode=FindAncestor}}" SetObjectCommand="{Binding DataContext.SetObjectCommand,RelativeSource={RelativeSource AncestorType=TabControl, Mode=FindAncestor}}" Margin="2,0">
+                                        <c:PropertiyView.Width>
+                                            <MultiBinding Converter="{StaticResource WidthConverter}">
+                                                <Binding Path="."/>
+                                                <Binding Path="ActualWidth" RelativeSource="{RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}"/>
+
+                                            </MultiBinding>
+                                        </c:PropertiyView.Width>
+                                    </c:PropertiyView>
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
                         </ItemsControl>
