--- a/src/UI/ConfigEditor.Wpf/Views/ConfigEditView.xaml
+++ b/src/UI/ConfigEditor.Wpf/Views/ConfigEditView.xaml
@@ -43,13 +43,13 @@
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
                                     <c:PropertiyView   AddCommand="{Binding DataContext.AddArrayCommand,RelativeSource={RelativeSource AncestorType=TabControl, Mode=FindAncestor}}" SetObjectCommand="{Binding DataContext.SetObjectCommand,RelativeSource={RelativeSource AncestorType=TabControl, Mode=FindAncestor}}" Margin="2,0">
-                                        <c:PropertiyView.Width>
+                                        <c:PropertiyView.MinWidth>
                                             <MultiBinding Converter="{StaticResource WidthConverter}">
                                                 <Binding Path="."/>
                                                 <Binding Path="ActualWidth" RelativeSource="{RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}"/>
 
                                             </MultiBinding>
-                                        </c:PropertiyView.Width>
+                                        </c:PropertiyView.MinWidth>
                                     </c:PropertiyView>
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
