--- a/src/UI/ConfigEditor.Wpf/Controls/PropertiyView.xaml
+++ b/src/UI/ConfigEditor.Wpf/Controls/PropertiyView.xaml
@@ -25,7 +25,25 @@
         <converters:ObjStringConverter x:Key="ObjStringConverter"></converters:ObjStringConverter>
         <DataTemplate x:Key="Normal">
             <StackPanel>
-                <TextBlock Text="{Binding DisplayName}" Style="{StaticResource tb}" />
+                <StackPanel Orientation="Horizontal">
+                    <StackPanel.Style>
+                        <Style TargetType="StackPanel">
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Tag" Value="Visible"/>
+                                </Trigger>
+                                <Trigger Property="IsMouseOver" Value="False">
+                                    <Setter Property="Tag" Value="Collapsed"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </StackPanel.Style>
+
+                    <TextBlock Text="{Binding DisplayName}" Style="{StaticResource tb}" />
+                    <Button Content="复制" Command="{Binding CopyCommand,ElementName=page}" CommandParameter="{Binding .}" Style="{StaticResource ButtonCustom}" Visibility="{Binding Tag, RelativeSource={RelativeSource AncestorType=StackPanel}}"/>
+                    <Button Content="粘贴" Command="{Binding PasteCommand,ElementName=page}" CommandParameter="{Binding .}" Style="{StaticResource ButtonCustom}" Visibility="{Binding Tag, RelativeSource={RelativeSource AncestorType=StackPanel}}"/>
+                </StackPanel>
+
                 <TextBox Text="{Binding Value,UpdateSourceTrigger=PropertyChanged}" x:Name="tbString" Validation.ErrorTemplate="{x:Null}" Style="{StaticResource TextBoxExtend}" hc:InfoElement.Placeholder="{Binding Prompt}"></TextBox>
                 <ItemsControl ItemsSource="{Binding (Validation.Errors),ElementName=tbString}" Visibility="{Binding (Validation.HasError), ElementName=tbString, Converter={StaticResource Boolean2VisibilityConverter}}">
                     <ItemsControl.ItemTemplate>
@@ -139,21 +157,49 @@
                                         <ColumnDefinition Width="*"/>
                                         <ColumnDefinition Width="Auto"/>
                                     </Grid.ColumnDefinitions>
-                                    <Button Content="-" 
-                                        Style="{StaticResource ButtonCustom}"
-                                        Command="{Binding RemoveCommand,ElementName=page}" 
-                                        CommandParameter="{Binding .}"
-                                        ToolTip="{Binding Path=(ItemsControl.AlternationIndex), RelativeSource={RelativeSource Mode=TemplatedParent}}"
-                                        Foreground="Red"
-                                        FontWeight="Bold"
-                                        FontSize="20"
-                                        Margin="0,-6,0,0"
-                                        HorizontalAlignment="Left"
-                                        VerticalAlignment="Top"/>
+                                    <StackPanel Margin="0,-6,0,0">
+                                        <Button Content="-" 
+                                            Style="{StaticResource ButtonCustom}"
+                                            Command="{Binding RemoveCommand,ElementName=page}" 
+                                            CommandParameter="{Binding .}"
+                                            ToolTip="{Binding Path=(ItemsControl.AlternationIndex), RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                            Foreground="Red"
+                                            FontWeight="Bold"
+                                            FontSize="20"
+                                           
+                                            HorizontalAlignment="Left"
+                                            VerticalAlignment="Top"/>
+                                        <Button Content="↑" 
+                                            Style="{StaticResource ButtonCustom}"
+                                            Command="{Binding UpCommand,ElementName=page}" 
+                                            CommandParameter="{Binding .}"
+                                            ToolTip="{Binding Path=(ItemsControl.AlternationIndex), RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                            Foreground="Blue"
+                                            FontWeight="Bold"
+                                            FontSize="10"
+                                           
+                                            HorizontalAlignment="Left"
+                                            VerticalAlignment="Top"/>
+                                        <Button Content="↓"
+                                            Style="{StaticResource ButtonCustom}"
+                                            Command="{Binding DownCommand,ElementName=page}" 
+                                            CommandParameter="{Binding .}"
+                                            ToolTip="{Binding Path=(ItemsControl.AlternationIndex), RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                            Foreground="Blue"
+                                            FontWeight="Bold"
+                                            FontSize="10"
+                                           
+                                            HorizontalAlignment="Left"
+                                            VerticalAlignment="Top"/>
+                                    </StackPanel>
+
                                     <local:PropertiyView DataContext="{Binding}" 
                                                          Grid.Column="1"
                                                          AddCommand="{Binding AddCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" 
-                                                         SetObjectCommand="{Binding SetObjectCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" Padding="0,0,10,0">
+                                                         SetObjectCommand="{Binding SetObjectCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}"
+                                                         CopyCommand="{Binding CopyCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" 
+                                                         PasteCommand="{Binding PasteCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" 
+                                                         Padding="0,0,10,0">
                                         <local:PropertiyView.MinWidth>
                                             <MultiBinding Converter="{StaticResource WidthConverter}">
                                                 <Binding Path="."/>
@@ -162,7 +208,7 @@
                                             </MultiBinding>
                                         </local:PropertiyView.MinWidth>
                                     </local:PropertiyView>
-                               
+
                                 </Grid>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
@@ -187,7 +233,10 @@
                                 <DataTemplate>
                                     <local:PropertiyView DataContext="{Binding}" 
                                                      AddCommand="{Binding AddCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" 
-                                                     SetObjectCommand="{Binding SetObjectCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" Margin="2,0">
+                                                     SetObjectCommand="{Binding SetObjectCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}"
+                                                    CopyCommand="{Binding CopyCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" 
+                                                    PasteCommand="{Binding PasteCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" 
+                                                         Margin="2,0">
                                         <local:PropertiyView.Width>
                                             <MultiBinding Converter="{StaticResource WidthConverter}">
                                                 <Binding Path="."/>
